# near-identity-test

./: .gitignore  Cargo.toml  README.md
dsnp-identity-assembly/: README.md  asconfig.js  deployAndIntialize.sh  package.json
dsnp-identity-assembly/assembly/: main.ts  model.ts  types.ts
dsnp-identity-ecrecover-experiment/: Cargo.toml  test-verify.sh
dsnp-identity-ecrecover-experiment/src/: lib.rs  sys.rs
dsnp-identity-no-verification/: Cargo.toml  add_delegate.sh  build_and_deploy.sh  minified-dsnp_identity_no_verifcation.wasm  size_all.sh
dsnp-identity-no-verification/src/: lib.rs
dsnp-identity-with-verification/: Cargo.toml  add_delegate.sh  build_and_deploy.sh  temp.sh
dsnp-identity-with-verification/src/: lib.rs
ed25519_verification/: Cargo.toml  build_and_deploy.sh  verification_test.sh
ed25519_verification/src/: lib.rs
identity-experiments/: Cargo.toml  README.md
identity-experiments/src/: lib.rs
modified-linkdrop/: Cargo.toml  README.md  build.sh
modified-linkdrop/identity/: counter.wasm
modified-linkdrop/res/: modified_linkdrop.wasm
modified-linkdrop/src/: lib.rs
registry/: Cargo.toml  README.md
registry/src/: lib.rs  storage_impl.rs
self-upgrade/: Cargo.toml  README.md  build.sh
self-upgrade/file-uploader/: index.js  package-lock.json  package.json
self-upgrade/src/: lib.rs
src/: lib.rs
sub-account-factory/: Cargo.toml  README.md  build.sh
sub-account-factory/src/: lib.rs
ui/: README.md  package-lock.json  package.json
ui/src/: App.js  config.js  index.js
