[package]
name = "near-identity"
version = "0.1.1"
edition = "2018"

[lib]
crate-type = ["cdylib","rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "3.1.0"
hex = "0.4.2"
slip10 = "0.4.3"
bip39 = { version = "1.0.0", features = [ "rand" ] }
bs58 = "0.3"
ed25519-dalek = { version = "1" }
wasm-bindgen = { version = "0.2", optional = true}
rand = {version = "0.6.5", features =["wasm-bindgen"]}

[dev-dependencies]
near-sdk-sim = "3.1.0"

[features]
wasm = ["wasm-bindgen"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true