[package]
edition = "2018"
name = "ecrecover-experiments"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sys = "0.1.0"
near-sdk = "3.1.0"
ed25519-dalek = "1.0.1"
bs58= "0.4.0"
serde = { version = "1.0", features = ["derive"] }
hex = { version = "0.4", features = ["serde"] }
borsh = { version = "0.9", default-features = false }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
debug = false
lto = true
opt-level = "z"
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true