[package]
name = "dsnp-identity"
version = "0.1.0"
authors = ["TEAM"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
ed25519-dalek = "1.0.1"
bs58= "0.4.0"
hex = { version = "0.4", features = ["serde"] }


[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true