[package]
name = "ed25519-verification"
version = "0.1.0"
authors = ["TEAM"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "3.1.0"
ed25519-dalek = "1.0.1"
bs58= "0.4.0"
hex = { version = "0.4", features = ["serde"] }


[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true