[package]
name = "identity-experiments"
version = "0.1.1"
edition = "2018"

[lib]
crate-type = ["cdylib","rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "3.1.0"
hex = "0.4.2"
# slip10 = "0.4.3"
# ed25519-dalek = { version = "1" }
# bip39 = { version = "1.0.1"}
# getrandom = { version = "0.2.3", features = ["js"]}

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

